Started work on Micro summary

--- a/micro.tex
+++ b/micro.tex
@@ -10,7 +10,7 @@
 \usepackage{amsfonts}
 \usepackage{amsthm}
 \usepackage{hyperref}
-\usepackage[dutch]{babel}
+% \usepackage[english]{babel}
 \counterwithin*{equation}{section}% Reset equation at \section
 \counterwithin*{equation}{subsection}% Reset equation at \subsection
 \counterwithin*{equation}{subsubsection}% Reset equation at \subsubsection
@@ -47,9 +47,9 @@
 %	            START OF DOCUMENT
 %------------------------------------------------
 
-\title{*}
-\author{*}
-\date{Academiejaar *}
+\title{Micro}
+\author{Pieter Vanderschueren}
+\date{Academiejaar 2023-2024}
 
 \begin{document}
 
@@ -79,10 +79,10 @@
 %	                INPUTS
 %------------------------------------------------
 
-\section{*}
+\section{Demand}
 
 \vspace{0.5cm}
 
-% \input{Chapters/*}
+\input{Chapters/Demand.tex}
 
 \end{document}
