kzen niet tevreden

--- a/micro.tex
+++ b/micro.tex
@@ -9,6 +9,7 @@
 \usepackage{caption}
 \usepackage{amsfonts}
 \usepackage{amsthm}
+\usepackage{pgfplots}
 \usepackage{hyperref}
 % \usepackage[english]{babel}
 \counterwithin*{equation}{section}% Reset equation at \section
