--- a/Commands/Definitie.tex
+++ b/Commands/Definitie.tex
@@ -7,13 +7,13 @@
 frametitle={%
 \tikz[baseline=(current bounding box.east),outer sep=0pt]
 \node[anchor=east,rectangle,fill=cyan!20]
-{\strut Definitie~\thetheo};}}
+{\strut Theorem~\thetheo};}}
 }%
 {\mdfsetup{%
 frametitle={%
 \tikz[baseline=(current bounding box.east),outer sep=0pt]
 \node[anchor=east,rectangle,fill=cyan!20]
-{\strut Definitie~\thetheo:~#1};}}%
+{\strut Theorem~\thetheo:~#1};}}%
 }%
 \mdfsetup{innertopmargin=10pt,linecolor=cyan!20,%
 linewidth=2pt,topline=true,%
